--- a/app/src/main/res/layout/leader_layout.xml
+++ b/app/src/main/res/layout/leader_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
+    android:layout_marginTop="4dp"
     android:background="#00000000"
     android:foreground="@drawable/shedule_border"
     android:padding="8dp">
