--- a/app/src/main/res/drawable/section_border.xml
+++ b/app/src/main/res/drawable/section_border.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="2dp" android:color="#838383" />
+    <stroke android:width="2dp" android:color="@color/GlobalSectionColor" />
     <corners android:radius="16dp"/>
 </shape>
