--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -140,14 +140,16 @@
             android:layout_height="wrap_content"
             android:text="FullNameText"
             android:textColor="@android:color/white"
-            app:layout_constraintEnd_toEndOf="parent" />
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/GroupName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="GroupName"
-            android:textColor="#B3B3B3"
+            android:textColor="#D1D1D1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/FullNameText" />
 
@@ -166,10 +168,19 @@
             android:background="@android:color/transparent"
             android:onClick="AccountExit"
             android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/divider"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/exit_logo" />
 
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="1dp"
+            android:background="@color/GlobalSectionColor"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/AccPhoto" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -436,6 +447,7 @@
                             android:id="@+id/MadedPercents"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="@+id/hw_progress"
                             app:layout_constraintStart_toStartOf="@+id/hw_progress"
