--- a/app/src/main/res/layout/leader_layout.xml
+++ b/app/src/main/res/layout/leader_layout.xml
@@ -7,7 +7,7 @@
     android:layout_marginTop="4dp"
     android:background="#00000000"
     android:foreground="@drawable/shedule_border"
-    android:padding="8dp">
+    android:padding="6dp">
 
     <ImageView
         android:id="@+id/StudentImage"
@@ -21,12 +21,13 @@
 
     <TextView
         android:id="@+id/StudentName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="4dp"
         android:text="1. StudentName"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/StudentImage"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="4dp"
+        android:layout_marginTop="4dp"
         android:text="GamePoints"
         android:textColor="#E19494"
         app:layout_constraintStart_toEndOf="@+id/StudentImage"
@@ -49,4 +51,15 @@
         app:layout_constraintStart_toEndOf="@+id/GamePoints"
         app:layout_constraintTop_toTopOf="@+id/GamePoints"
         app:srcCompat="@drawable/top_money" />
+
+    <TextView
+        android:id="@+id/studentPosition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/alatsi"
+        android:text="#10"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
