--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,11 @@
     <color name="light_blue_900">#FF01579B</color>
     <color name="MiniSectionColor">#555555</color>
     <color name="GlobalSectionColor">#444444</color>
-    <color name="loginbutton">#5B7C5C</color>
-    <color name="loginbuttontext">#FFFFFF</color>
+    <color name="loginbutton">#179900</color>
+    <color name="loginbuttontext">#FFF</color>
+    <color name="constraintBgColor">#031201</color>
+    <color name="loginTextColor">#FFF</color>
+    <color name="TitleText">#FFF</color>
+    <color name="NotTitledText">#DEDEDE</color>
+    <color name="NotTitledTextLite">#EBEBEB</color>
 </resources>
