--- a/app/src/main/res/values-v31/colors.xml
+++ b/app/src/main/res/values-v31/colors.xml
@@ -11,4 +11,7 @@
     <color name="NotTitledTextLite">@android:color/system_accent1_50</color>
     <color name="CheckboxBackgroundColor">@android:color/system_accent1_300</color>
     <color name="CheckboxColor">@android:color/system_accent2_50</color>
+    <color name="SnackbarBackground">@android:color/system_accent1_800</color>
+    <color name="SnackbarForeground">@android:color/system_accent1_100</color>
+    <color name="white">#FFF</color>
 </resources>
